fix(homepage): GIF scaling on mobile devices

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -299,7 +299,6 @@ a:hover {
 
   .gif img {
     border-radius: 12px;
-    transform: scale(1.25);
   }
 
   .cli-overlay {
